Replace deprecated constructors for Integer, Double, etc.