@@ -33,7 +33,7 @@ public class SpeciationComboProfileExImTest extends PersistenceTestCase {
         dbServer = dbSetup.getDbServer();
         sqlDataTypes = dbServer.getSqlDataTypes();
 
-        optimizedBatchSize = new Integer(10000);
+        optimizedBatchSize = Integer.valueOf(10000);
         dataset = dataset("test");
     }
 
