@@ -17,8 +17,8 @@ public class UserRowSource implements RowSource {
 
     public Object[] values() {
         return new Object[] { source.getUsername(), source.getName(), source.isLoggedIn(), source.getPhone(), source.getEmail(), 
-                new Boolean(source.isAdmin()), source.getWantEmails(), format(source.getLastLoginDate()), format(source.getLastResetDate()),
-                new Boolean(source.isAccountDisabled()), source.getFailedLoginAttempts() };
+                Boolean.valueOf(source.isAdmin()), source.getWantEmails(), format(source.getLastLoginDate()), format(source.getLastResetDate()),
+                Boolean.valueOf(source.isAccountDisabled()), source.getFailedLoginAttempts() };
         }
 
     public Object source() {
