@@ -1386,6 +1386,6 @@ public class ModuleTypeVersion implements Serializable {
 
     public int compareTo(ModuleTypeVersion o) {
         if (this == o) return 0;
-        return new Integer(id).compareTo(o.getId());
+        return Integer.valueOf(id).compareTo(o.getId());
     }
 }
